--- a/e2e/jest-css-transform-demo/package.json
+++ b/e2e/jest-css-transform-demo/package.json
@@ -9,6 +9,11 @@
     "react-dom": "17.0.2",
     "ts-lib-tools": "^0.14.3"
   },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.0.0",
+    "react-dom": "^17.0.0"
+  },
   "scripts": {
     "test": "ts-lib-tools test"
   },
