--- a/packages/ts-lib-tools/package.json
+++ b/packages/ts-lib-tools/package.json
@@ -27,16 +27,16 @@
     "lib/**/*"
   ],
   "dependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/plugin-transform-modules-commonjs": "^7.15.4",
+    "@babel/core": "^7.17.10",
+    "@babel/plugin-transform-modules-commonjs": "^7.17.9",
     "@rollup/plugin-image": "^2.0.6",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-replace": "^2.4.1",
     "@svgr/rollup": "^5.5.0",
-    "@types/jest": "^27.0.1",
+    "@types/jest": "^27.5.0",
     "async": "^3.2.1",
-    "babel-jest": "^27.2.0",
+    "babel-jest": "^28.1.0",
     "babel-preset-ts-lib": "^0.14.1",
     "camelcase": "^6.2.0",
     "chalk": "^4.1.2",
@@ -49,9 +49,10 @@
     "globby": "^11.0.4",
     "husky": "^7.0.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.2.0",
+    "jest": "^28.1.0",
     "jest-resolver-tsconfig-paths": "^0.14.0",
     "jest-watch-typeahead": "^0.6.4",
+    "jest-environment-jsdom": "^28.1.0",
     "lint-staged": "^11.1.2",
     "md5": "^2.3.0",
     "ora": "^5.4.1",
