--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,6 @@
 {
   "useWorkspaces": true,
   "npmClient": "yarn",
-  "packages": [
-    "packages/*"
-  ],
-  "version": "0.14.3"
+  "packages": ["packages/*"],
+  "version": "0.14.4"
 }
